--- a/build.xml
+++ b/build.xml
@@ -8,9 +8,25 @@
 	<property name="distGlobal.dir" value="../sbc2_global/dist"/>
 	<property name="res.dir" value="res"/>
 	<property name="config.file" value="mozartspaces.xml"/>
-	<property name="configServer.file" value="mozartspacesServer.xml"/>
+	
+	<property name="config.file" value="mozartspaces.xml"/>
+	<property name="configServer.file" value="mozartspacesServer1.xml"/>
 	<property name="spacePort" value="4242"/>
 	<property name="spaceURI" value="xvsm://localhost:${spacePort}"/>
+	
+	<property name="s2.config.file" value="mozartspaces.xml"/>
+	<property name="s2.configServer.file" value="mozartspacesServer2.xml"/>
+	<property name="s2.spacePort" value="9876"/>
+	<property name="s2.spaceURI" value="xvsm://localhost:${s2.spacePort}"/>
+	
+	<property name="s3.config.file" value="mozartspaces.xml"/>
+	<property name="s3.configServer.file" value="mozartspacesServer3.xml"/>
+	<property name="s3.spacePort" value="8888"/>
+	<property name="s3.spaceURI" value="xvsm://localhost:${s3.spacePort}"/>
+	
+  	<include file="build_server1.xml" as="s1" />
+  	<include file="build_server2.xml" as="s2" />
+  	<include file="build_server3.xml" as="s3" />
 	
 	<path id="classpath">
 		<fileset dir="${lib.dir}" includes="**/*.jar" />
@@ -32,46 +48,69 @@
 		<copy file="${src.dir}/log4j.properties" tofile="${build.dir}/log4j.properties"/>
 		<copy file="${src.dir}/logback.xml" tofile="${build.dir}/logback.xml"/>
 	</target>
-
-	<!-- start space -->
-	<target name="run-space" depends="compile">
-		<java classname="sbc.spaceServer.Server"
-				fork="true"
-				classpathref="classpath">
-			<jvmarg value="-Dmozartspaces.configurationFile=${configServer.file}"/>
-			<arg line="${spaceURI}"/>
-		</java>
-	</target>
 	
-	<target name="run-admin" depends="compile">
-		<java classname="sbc.admin.Admin" 
-			fork="true"
-			classpathref="classpath">
-			<jvmarg value="-Dmozartspaces.configurationFile=${config.file}"/>
-			<arg line="${spaceURI}"/>
-		</java>
-	</target>
-	
-	<!-- SHOULD NOT BE USED DIRECTLY -->
-	<target name="run-chicken" depends="compile">
-		<java classname="sbc.producer.Chicken" 
-			fork="true"
-			classpathref="classpath">
-			<jvmarg value="-Dmozartspaces.configurationFile=${config.file}"/>
-			<arg line="1 3 ${spaceURI}"/>
-		</java>
+	<!-- starts 3 spaces -->
+	<target name="run-spaces" depends="compile">
+		<parallel>
+			<ant target="s1.run-space" />
+			<ant target="s2.run-space" />
+			<ant target="s3.run-space" />
+		</parallel>
 	</target>
 
-	<!-- SHOULD NOT BE USED DIRECTLY -->
-	<target name="run-chocolate" depends="compile">
-		<java classname="sbc.producer.ChocolateRabbitRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="2 3 ${spaceURI}"/>
-		</java>
+	<!-- starts the 3 admin interfaces -->
+	<target name="run-admins" depends="compile">
+		<parallel>
+			<ant target="s1.run-admin" />
+			<ant target="s2.run-admin" />
+			<ant target="s3.run-admin" />
+		</parallel>
 	</target>
-
 	
+	<!-- starts the color rabbits (3 x 4)-->
+	<target name="run-colorRabbits" depends="compile">
+		<parallel>
+			<ant target="s1.run-colorRabbit" />
+			<ant target="s1.run-colorRabbit2" />
+			<ant target="s1.run-colorRabbit3" />
+			<ant target="s1.run-colorRabbit4" />
+			<ant target="s2.run-colorRabbit" />
+			<ant target="s2.run-colorRabbit2" />
+			<ant target="s2.run-colorRabbit3" />
+			<ant target="s2.run-colorRabbit4" />
+			<ant target="s3.run-colorRabbit" />
+			<ant target="s3.run-colorRabbit2" />
+			<ant target="s3.run-colorRabbit3" />
+			<ant target="s3.run-colorRabbit4" />
+		</parallel>
+	</target>
+	
+	<!-- starts the build rabbits (3 x 1)-->
+	<target name="run-buildRabbits" depends="compile">
+		<parallel>
+			<ant target="s1.run-buildRabbit" />
+			<ant target="s2.run-buildRabbit" />
+			<ant target="s3.run-buildRabbit" />
+		</parallel>
+	</target>
+	
+	<!-- starts the logistic rabbits (3 x 1)-->
+	<target name="run-logisticRabbits" depends="compile">
+		<parallel>
+			<ant target="s1.run-logisticRabbit" />
+			<ant target="s2.run-logisticRabbit" />
+			<ant target="s3.run-logisticRabbit" />
+		</parallel>
+	</target>
+	
+	<!-- starts the test rabbits (3 x 1)-->
+	<target name="run-testRabbits" depends="compile">
+		<parallel>
+			<ant target="s1.run-testRabbit" />
+			<ant target="s2.run-testRabbit" />
+			<ant target="s3.run-testRabbit" />
+		</parallel>
+	</target>
 	
 	<!-- LOAD BALANCING RABBIT -->
 	<target name="run-loadRabbit" depends="compile">
@@ -79,98 +118,10 @@
 			fork="true"
 			classpathref="classpath">
 			<jvmarg value="-Dmozartspaces.configurationFile=${config.file}"/>
-			<arg line="1337 ${spaceURI}"/>
+			<arg line="1337 ${spaceURI} ${s2.spaceURI} ${s3.spaceURI}"/>
 		</java>
 	</target>
 	
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-<!-- !!! following ANT TAGS have to be created for more than 1 space! -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-	<target name="run-colorRabbit" depends="compile">
-		<java classname="sbc.worker.ColorRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="1 ${spaceURI} RED"/>
-		</java>
-	</target>
-	
-	<target name="run-colorRabbit2" depends="compile">
-		<java classname="sbc.worker.ColorRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="2 ${spaceURI} GREEN"/>
-		</java>
-	</target>
-
-	<target name="run-colorRabbit3" depends="compile">
-		<java classname="sbc.worker.ColorRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="42 ${spaceURI} BLUE"/>
-		</java>
-	</target>
-	
-	<target name="run-colorRabbit4" depends="compile">
-		<java classname="sbc.worker.ColorRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="24 ${spaceURI} YELLOW"/>
-		</java>
-	</target>
-	
-	
-	
-	<target name="run-buildRabbit" depends="compile">
-		<java classname="sbc.worker.BuildRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="3 ${spaceURI}"/>
-		</java>
-	</target>
-
-	<target name="run-buildRabbit2" depends="compile">
-		<java classname="sbc.worker.BuildRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="4 ${spaceURI}"/>
-		</java>
-	</target>
-	
-	<target name="run-testRabbit" depends="compile">
-		<java classname="sbc.worker.TestRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="10 ${spaceURI}"/>
-		</java>
-	</target>
-	
-	<target name="run-testRabbit2" depends="compile">
-		<java classname="sbc.worker.TestRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="12 ${spaceURI}"/>
-		</java>
-	</target>
-	
-	<target name="run-logisticRabbit" depends="compile">
-		<java classname="sbc.worker.LogisticRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="5 ${spaceURI}"/>
-		</java>
-	</target>
-	
-	<target name="run-logisticRabbit2" depends="compile">
-		<java classname="sbc.worker.LogisticRabbit" 
-			fork="true"
-			classpathref="classpath">
-			<arg line="6 ${spaceURI}"/>
-		</java>
-	</target>
 	
 	<target name="clean">
 		<delete dir="${build.dir}"/>
